--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.17.14",
     "@types/node": "^18.18.0",
+    "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "19.0.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
